Postponed annotation evaluation in Python 3.10 breaks scripts. #83626

Closed
opened 2020-12-10 12:44:43 +01:00 by Jacques Lucke · 8 comments
Member

Starting with Python 3.10, type annotation evaluation is postponed until requested explicitly using e.g. typing.get_type_hints(). This is a problem, because we make great use of annotations in Python scripts and Blender expects them to be evaluated.

The issue can be reproduced in the Python version we use currently with a __future__ import.

  1. Add from __future__ import annotations as first import statement in release/scripts/startup/bl_operators/wm.py.
  2. Start Blender.
  3. The terminal output contains many errors, because the properties of registered classes haven't been created.

Further Info:


One solution is obviously not to use annotations for that use case anymore. However, given that we just forced everyone to update their scripts to use annotations, it's probably unlikely that we want to reverse that change. It's still an option though.

A solution that does not require an api breakage could work as follows:

  1. Finish D8782, so that typing.get_type_hints() actually works with our types.
  2. Use typing.get_type_hints() in bpy.utils.register_class().

This strategy seems to work in my improvised test in P1841. This is a diff that combines D8782 and some changes in wm.py. See that it still works although from __future__ import annotations is added in wm.py.

Overall, it is not clear to me, whether this is a correct use case for annotations, since it also doesn't work with static type checkers and autocomplete very well. What was the original motivation for using annotations in this context?

Starting with Python 3.10, type annotation evaluation is postponed until requested explicitly using e.g. `typing.get_type_hints()`. This is a problem, because we make great use of annotations in Python scripts and Blender expects them to be evaluated. The issue can be reproduced in the Python version we use currently with a `__future__` import. 1. Add `from __future__ import annotations` as first import statement in `release/scripts/startup/bl_operators/wm.py`. 2. Start Blender. 3. The terminal output contains many errors, because the properties of registered classes haven't been created. Further Info: * Python 3.10 release notes: https://docs.python.org/3.10/whatsnew/3.10.html * PEP 619 - Python 3.10 release schedule: https://www.python.org/dev/peps/pep-0619/ * PEP 563 - Postponed evaluation of annotations: https://www.python.org/dev/peps/pep-0563/ * Related Pylance report: https://github.com/microsoft/pylance-release/issues/708 ---------- One solution is obviously not to use annotations for that use case anymore. However, given that we just forced everyone to update their scripts to use annotations, it's probably unlikely that we want to reverse that change. It's still an option though. A solution that does not require an api breakage could work as follows: 1. Finish [D8782](https://archive.blender.org/developer/D8782), so that `typing.get_type_hints()` actually works with our types. 2. Use `typing.get_type_hints()` in `bpy.utils.register_class()`. This strategy seems to work in my improvised test in [P1841](https://archive.blender.org/developer/P1841.txt). This is a diff that combines [D8782](https://archive.blender.org/developer/D8782) and some changes in `wm.py`. See that it still works although `from __future__ import annotations` is added in `wm.py`. Overall, it is not clear to me, whether this is a correct use case for annotations, since it also doesn't work with static type checkers and autocomplete very well. What was the original motivation for using annotations in this context?
Author
Member

Added subscribers: @JacquesLucke, @ideasman42

Added subscribers: @JacquesLucke, @ideasman42
Jacques Lucke changed title from Postponed annotation evaluation in Python 3.10 breaks scrips. to Postponed annotation evaluation in Python 3.10 breaks scripts. 2020-12-10 12:45:34 +01:00

Added subscriber: @KZekai

Added subscriber: @KZekai

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

Added subscriber: @Phigon

Added subscriber: @Phigon

Added subscriber: @grzelins

Added subscriber: @grzelins
Member

Added subscriber: @EAW

Added subscriber: @EAW

This issue was referenced by 08dbc4f996

This issue was referenced by 08dbc4f996e4e95f3ab64f7bb3e1193700c585f5

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2021-02-21 12:39:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83626
No description provided.