intern/cycles/blender/addon/operators.py
@@ -15,6 +15,7 @@
 #
 
 # <pep8 compliant>
+from __future__ import annotations
 
 import bpy
 from bpy.types import Operator
