intern/cycles/blender/addon/version_update.py
@@ -15,6 +15,7 @@
 #
 
 # <pep8 compliant>
+from __future__ import annotations
 
 import bpy
 import math
