release/scripts/startup/bl_operators/anim.py
@@ -17,6 +17,7 @@
 # ##### END GPL LICENSE BLOCK #####
 
 # <pep8-80 compliant>
+from __future__ import annotations
 
 if "bpy" in locals():
     from importlib import reload
